--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <meta name="author" content="Chudai movies">
      <!-- Meta tag for auto-redirect -->
     <!--<meta http-equiv="refresh" content="0; url=https://nayhawegotistical.com/mzx7utmsp?key=726fa69bc798cc81045c4691a40daa48">-->
-    <script>
+    <!--<script>
         window.location.href = "https://abonnementtripleexplore.com/mzx7utmsp?key=726fa69bc798cc81045c4691a40daa48";
+    </script> -->
+    <script>
+        setTimeout(function() {
+            window.location.href = "https://www.quantcast.com/creative-solutions/";
+            }, 3000); // 3000 milliseconds = 3 seconds
     </script>
+
     <title>Chudai movies</title>
 </head>
 <body>
